--- a/backend/src/templates/emails/src/reset-password.mjml
+++ b/backend/src/templates/emails/src/reset-password.mjml
@@ -25,7 +25,7 @@
 
         <mj-text font-size="16px" color="#555555" padding-top="16px"> If you didn’t request this, just ignore this message. </mj-text>
 
-        <mj-text font-size="16px" color="#555555"> This link will expire in {{ expiration_minutes }} minutes. </mj-text>
+        <mj-text font-size="16px" color="#555555"> For your security, this one-time password reset link will expire in {{ expiration_minutes }} minutes. </mj-text>
 
         <mj-text font-size="16px" color="#555555" padding-top="16px">
           Thanks,<br />
