--- a/backend/src/templates/emails/welcome.html
+++ b/backend/src/templates/emails/welcome.html
@@ -84,7 +84,7 @@
 
 <body style="word-spacing:normal;background-color:#f7f7f7;">
   <div style="display:none;font-size:1px;color:#ffffff;line-height:1px;max-height:0px;max-width:0px;opacity:0;overflow:hidden;">Welcome aboard, {{ user_name }}!</div>
-  <div style="background-color:#f7f7f7;" lang="und" dir="auto">
+  <div aria-label="Welcome to {{ app_name }}" aria-roledescription="email" style="background-color:#f7f7f7;" role="article" lang="und" dir="auto">
     <!-- Header -->
     <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:600px;" width="600" bgcolor="#0052cc" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
     <div style="background:#0052cc;background-color:#0052cc;margin:0px auto;max-width:600px;">
@@ -113,11 +113,11 @@
     <!--[if mso | IE]></td></tr></table><![endif]-->
     <!-- Main Content -->
     <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:600px;" width="600" bgcolor="#ffffff" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
-    <div style="background:#ffffff;background-color:#ffffff;margin:0px auto;border-radius:6px;max-width:600px;">
-      <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#ffffff;background-color:#ffffff;width:100%;border-radius:6px;">
+    <div style="background:#ffffff;background-color:#ffffff;margin:0px auto;max-width:600px;border-radius:6px;overflow:hidden;">
+      <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#ffffff;background-color:#ffffff;width:100%;border-collapse:separate;">
         <tbody>
           <tr>
-            <td style="direction:ltr;font-size:0px;padding:32px;text-align:center;">
+            <td style="border-radius:6px;direction:ltr;font-size:0px;padding:32px;text-align:center;">
               <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:top;width:536px;" ><![endif]-->
               <div class="mj-column-per-100 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;">
                 <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="vertical-align:top;" width="100%">
